[project]
name = "knmi-harm-arome-cy43-reforecast-dataset"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.4.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "cfgrib>=0.9.15.0",
    "netcdf4>=1.7.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "tqdm>=4.67.1",
    "xarray>=2025.1.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "plotly>=6.0.0",
    "rasterio>=1.4.3",
]
